2025-11-19T12:17:49Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19501008446 # 1315
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-19
* notice: last 14d: unq all: 12 31
* notice: prev accum: outdated-unq outdated-all / unq all: 1273 6054 / 1286 6084
* notice: next accum: outdated-unq outdated-all / unq all: 1273 6054 / 1287 6087
* notice: prev exec diff / last date diff / accum: unq all: +1 +3 -1 -2 / +1 +3 -0 -0 / 1 3
* notice: removed / changed dates: [] / [2025-11-05 2025-11-19]

2025-11-19T00:44:02Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19485603923 # 1314
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-19
* notice: last 14d: unq all: 12 30
* notice: prev accum: outdated-unq outdated-all / unq all: 1273 6054 / 1285 6083
* notice: next accum: outdated-unq outdated-all / unq all: 1273 6054 / 1286 6084
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-11-18]

2025-11-18T00:43:48Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19449762168 # 1312
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-18
* notice: last 14d: unq all: 11 29
* notice: prev accum: outdated-unq outdated-all / unq all: 1272 6052 / 1285 6083
* notice: next accum: outdated-unq outdated-all / unq all: 1273 6054 / 1285 6083
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-11-03] / []

2025-11-17T12:18:02Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19429323314 # 1311