@@ -1,12 +1,7 @@
 {
-  "count": 31,
+  "count": 29,
   "uniques": 12,
   "views": [
-    {
-      "timestamp": "2025-11-05T00:00:00Z",
-      "count": 3,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-11-07T00:00:00Z",
       "count": 1,
@@ -54,8 +49,8 @@
     },
     {
       "timestamp": "2025-11-19T00:00:00Z",
-      "count": 3,
-      "uniques": 1
+      "count": 4,
+      "uniques": 2
     }
   ]
 }
