@@ -1,3 +1,12 @@
+2025-11-20T00:43:21Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19521291662 # 1316
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-20
+* notice: last 14d: unq all: 12 29
+* notice: prev accum: outdated-unq outdated-all / unq all: 1273 6054 / 1287 6087
+* notice: next accum: outdated-unq outdated-all / unq all: 1275 6059 / 1288 6088
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +4 -0 -0 / 2 4
+* notice: removed / changed dates: [2025-11-05] / [2025-11-19]
+
 2025-11-19T12:17:49Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19501008446 # 1315
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-19
